--- a/index.html
+++ b/index.html
@@ -76,13 +76,6 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Setuo</h3>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
 									<h3>Demo</h3>
 									<p>Login Page:</p>
 									<img src="images/loginpage2.gif" width="780">
@@ -91,7 +84,14 @@
 								</div>
 							</section>
 
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Setup</h3>
+								</div>
+							</section>
 
+						<!-- Five -->
 							<section id="five">
 								<div class="container">
 									<h3>Source Code</h3>
