--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Artur Skrzeta</a></h1>
+					<span class="image avatar"><a href="https://arturskrzeta.github.io/"><img src="images/avatar.png" alt="" /></a></span>
+					<h1 id="logo"><a href="https://arturskrzeta.github.io/">Artur Skrzeta</a></h1>
 					<p>Data Analyst<br />
 					+4 years experience</p>
 				</header>
@@ -88,6 +88,10 @@
 							<section id="four">
 								<div class="container">
 									<h3>Setup</h3>
+									<p>Server package installation required:</p>
+									<ul>
+										<li>XAMPP Apache</li>
+									</ul>
 								</div>
 							</section>
 
