--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 									<header class="major">
 										<h2>PHP Full Stack App</h2>
 										<h3>Intro</h3>
-										<p>The application for requests/tickets/tasks management raised from the need of ecsaping from shared excel files where the risk of getting things messy is very very high.
-											That affects the data quality which has enormous imapct on further reporting and the analysis.</p>
+										<p>Web application to make communication between Requesters and Buyers much easier. Everyone can post his or her question/issue and be answered by procurement representative.</p>
 											<ul>
 												<li>Getting feedback for a consumer/client is the best way to deploy the process continues improvement.</li>
 												<li>Giving communication channel requester can post a feedback or question in much easier way.</li>
